# gseqNMF

./: README.md  pyproject.toml
gseqnmf/: __init__.py  exceptions.py  gseqnmf.py  support.py  validation.py
scripts/: lint.bat
tests/: conftest.py  test_gseqNMF.py  test_support.py  test_validation.py
tests/a_test_installation/: test_a_install.py
tests/datasets/: example_dataset.npz
